# Control-Hub

gimx-pi/: CMakeLists.txt  README.md  build.sh  prepare_sd.sh
gimx-pi/config/: 99-gimx-pi.rules
gimx-pi/src/: hardware.c  hardware.h  input.h  main.c  optimize.c  optimize.h  ps5.c  ps5.h  rpi3b.ld  script.c  script.h  script_gui.c  script_gui.h  status.c  status.h  usb.c  usb.h
gimx-pi/test/: run_tests.c  run_tests.sh  test_analysis.c  test_analysis.h  test_framework.c  test_framework.h  test_gimx.sh  test_report.c  test_script_gui.c  test_subsystems.h
slave/: CHANGELOG.md  CMakeLists.txt  DEVELOPMENT.md  README.md  TASKS.md  build.sh  install.sh  prepare_sd.sh
slave/.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
slave/.github/workflows/: ci.yml
slave/config/: 99-controlhub-slave.rules  config.xml
slave/src/: optimize.c  script_lib.c  script_lib.h  util.h
slave/test/: TEST_PROGRESS.md  hardware_types.h  run_tests.c  run_tests.sh  run_tests_final.sh  test_config.h  test_gimx.sh  test_hardware.c  test_hardware.h  test_report.h  test_script_gui.h
